--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -85,18 +85,33 @@
 			............................................</p>
 		</div>
 
-		<div id="banking_glossary_box">
-			<p>paragraph1</p>
-			<p>paragraph1</p>
-			<p>paragraph1</p>
-
-		</div>
+	<div id="banking_glossary_box" style="width:1055px; height:400; overflow: auto;" >
+		<p>A <b>bank</b> is a place that looks after people’s money for them and keeps it safe. It also lends money to people to help them buy things, such as houses, cars or bikes.</p>
+		<p>A <b>budget </b> is a plan on how you will spend the money that you earn and save up. 
+        	It includes the amount of money that you earn, details on what you want to spend that money on and how much you will need to save.</p>
+		<p><b>Saving</b> means not spending the money that you earn straight away. Normally people put their money in a bank account until they have saved enough to buy what they want, using their budget.</p>
+		<p>A<b>bank account</b> is a record that your bank keeps to know how much money you have given them to look after. You are able to put money in your bank account and withdraw it and you are given a unique account number to identify your bank account.</p>
+        	<p>An <b>account number</b> is a unique number that identifies your account in the banks records</p>
+        	<p>A <b>sort-code </b> is a six digit code that identifies what bank and which branch your account is at. You normally use this to tell other people where your bank account is.</p>
+        	<p>A <b>deposit</b> is when you put money in your bank account</p>
+        	<p>A <b>withdrawal</b> is when you take money out of your bank account.</p>
+	</div>
 		
-		<div id="banking_tips_box">
-			<p>paragraph1</p>
-			<p>paragraph1</p>
-			<p>paragraph1</p>
-		</div>
+		<div id="banking_tips_box" style="width:1045px; height:400; overflow: auto; padding-left:10px;" >
+			<h3>Get a savings account</h3>
+            <ul>
+               <li>If you really want to save a lot of money then getting a savings account is important and it should be separate to your normal account</li>
+                </ul>
+			<h3>Start saving your money now</h3>
+            <ul>
+               <li>The next step is to start putting money in your account, starting with whatever money you have, even if it is a small amount, it all helps.</li>
+               <li>The best thing to do is make a budget or saving plan and decide how much you’re willing to save every time you earn some money and then do it.</li>
+                </ul>
+			<h3>Investing your money</h3>
+            <ul>
+               <li>If you have a really serious goal then the best idea is to start making your money work for you.</li>
+               <li> The way you do this is by investing your money somewhere it’s going to make more interest than in your savings account.</li>
+               </ul></div>
 	</div>
 	
 </div>
