--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -13,17 +13,8 @@
 </head>
 <body>
 
-<div id="nav_bar">
-<ul>	
-    <li> <a href="home.html">Home</a></li>
-    <li> <a href="index.html">Profile</a></li>
-    <li> <a href="Accounts.html">Accounts </a></li>
-    <li> <a href="goals.html">Goals</a></li>
-    <li> <a href="collection.html">Collection</a></li>
-    <li> <a href="ATMs.html">ATMs</a></li>
-    <li> <a href="Guide.html">Banking Guide</a></li>
-</ul>
-</div>
+{% include 'nav_bar.html' %}
+
 
 <div id="banner">
 	<img  src={% static "accounts/Accounts_1.png" %} width="1055px" height="191px" alt="Accounts Banner">
@@ -119,9 +110,8 @@
 
 </div>
 
-<div id="footer">
-	<p>Page Footer</p>
-</div>
+	{% include 'footer.html' %}
 
-</body>
+
+	</body>
 </html>
