Fixed duplicate arrows

--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -37,13 +37,13 @@
 
 	<div id="leftarrow">
 		<img src={% static "accounts/left_arrow.png" %} alt="Left Arrow">
-		<img src="{% static 'accounts/left_arrow.png' %}" alt="Left Arrow">
+		<!-- <img src="{% static 'accounts/left_arrow.png' %}" alt="Left Arrow">-->
 		<input type="text" value="  ￡" />
 	</div>
 
 	<div id="rightarrow">
-		<img src={% static "accounts/right_arrow.png" %}alt="Right Arrow">
-		<img src="{% static 'accounts/right_arrow.png' %}" alt="Right Arrow">
+		<img src={% static "accounts/right_arrow.png" %} alt="Right Arrow">
+		<!-- <img src="{% static 'accounts/right_arrow.png' %}" alt="Right Arrow"> -->
 		<input type="text" value="  ￡" />
 	</div> 
 
