--- a/templates/references.html
+++ b/templates/references.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="../css/references.css" />
+	<link rel="stylesheet" type="text/css" href={% static 'references.css' %} />
 	<title>References</title>
 </head>
 
@@ -22,8 +22,8 @@
 </div>
 
 <div id="banner">
-	<img src="../images/general/references.png" alt="References" title="References" width="1055" height="191" />
-	<img  src="../images/general/logout_1.png" width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	<img src={% static 'general/references.png' %} alt="References" title="References" width="1055" height="191" />
+	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">
