--- a/templates/references.html
+++ b/templates/references.html
@@ -39,6 +39,7 @@
 	<hr/>	
 		
 	<p><b class="section_title">Profile Page Banners</b><br/>
+		imgkid.com (2015), <i>Kids playing at school</i>,  <a href="http://imgkid.com/kids-playing-at-school.shtml" class="site_links">http://imgkid.com/kids-playing-at-school.shtml</a><br/>
 		Fischa (2014), <i>Beautiful night sky wallpaper</i>, <a href="http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/" class="site_links">http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/</a><br/>											
 		Summe C. (2014), <i>Roller Coaster</i>, <a href="http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/" class="site_links">http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/</a><br/>								
 		SAW International (2007), <i>Fish farming – silent screams</i>, <a href="http://www.saawinternational.org/fishfarming.htm" class="site_links">http://www.saawinternational.org/fishfarming.htm</a><br/>		
