--- a/static/login/Landing_Page.css
+++ b/static/login/Landing_Page.css
@@ -194,19 +194,14 @@ body		{
 				margin-right:auto;
 }				
 				
-#brands_logos_container	{width: 100%;
-				background-color: #FFFFFF;}
-
-#brands_logo_holder{
-
-	width:70%;
-	margin-left:auto;
-	margin-right:auto;
-	padding-left:70px;
-}			
+#partners		{width: 101%;
+				background-color: #FFFFFF;}				
+#brands_logos	{margin: 0px auto;
+				width: 80%;
+				text-align: center;}			
 				
-.logos	{width: 170px;
-		height: 170px;
-		float: none;
-		margin: 5px auto;}
+.logos	{width: 200px;
+		height: 200px;
+		float: center;
+		margin: 0px 100px;}
 		
