--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -119,17 +119,17 @@
 	</div>
 </div>
 
-<div class="white">
+<div class="white" id="profile">
 	<div class="ABOUT_content" id="profiles_text">
 		<p class="site_info">Customise your profile colour preferences</p>
 	</div>	
 	
 	<div class="ABOUT_content" id="profiles_pics">	
-		<img src={% static 'login/pages/100.png' %} width="250px" height="210px" alt="home" class="page_sample"/>
-		<img src={% static 'login/pages/101.png' %} width="250px" height="210px" alt="home" class="page_sample"/>
-		<img src={% static 'login/pages/102.png' %} width="250px" height="210px" alt="home" class="page_sample"/>
-		<img src={% static 'login/pages/103.png' %} width="250px" height="210px" alt="home" class="page_sample"/>
-		<img src={% static 'login/pages/104.png' %} width="250px" height="210px" alt="home" class="page_sample"/>
+	
+		<img src={% static 'login/left_arrow_1.png' %} alt="previous" id="left_arrow" onclick="rotateLeft();" class="page_sample">
+		<div id="image_container" class="page_sample"><img src={% static 'login/pages/100.png' %} alt="profile samples" id="profile_image"></div>
+		<img src={% static 'login/right_arrow.png' %} alt="next" id="right_arrow" onclick="rotateRight();" class="page_sample">
+		
 	</div>	
 </div>
 
