--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -147,15 +147,15 @@
 	
 	<div id="partners">
 	<div id="brands_logos">
-		<img src="../images/login/bank_of_scotland.png" alt="bank_of_scotland" class="logos">
-		<img src="../images/login/birmingham_midshares.png" alt="birmingham_midshares" class="logos">
-		<img src="../images/login/black_horse.png" alt="black_horse" class="logos">
-		<img src="../images/login/colleys.png" alt="colleys" class="logos">
-		<img src="../images/login/halifax.png" alt="halifax" class="logos">
-		<img src="../images/login/ldc.png" alt="ldc" class="logos">
-		<img src="../images/login/lloyds_autolease.png" alt="lloyds_autolease" class="logos">
-		<img src="../images/login/lloyds_bank.png" alt="lloyds_bank" class="logos">
-		<img src="../images/login/scottish_widows.png" alt="scottish_widows" class="logos">
+		<img src={% static 'login/bank_of_scotland.png' %} alt="bank_of_scotland" class="logos">
+		<img src={% static 'login/birmingham_midshares.png' %} alt="birmingham_midshares" class="logos">
+		<img src={% static 'login/black_horse.png' %} alt="black_horse" class="logos">
+		<img src={% static 'login/colleys.png' %} alt="colleys" class="logos">
+		<img src={% static 'login/halifax.png' %} alt="halifax" class="logos">
+		<img src={% static 'login/ldc.png' %} alt="ldc" class="logos">
+		<img src={% static 'login/lloyds_autolease.png' %} alt="lloyds_autolease" class="logos">
+		<img src={% static 'login/lloyds_bank.png' %} alt="lloyds_bank" class="logos">
+		<img src={% static 'login/scottish_widows.png' %} alt="scottish_widows" class="logos">
 	</div>
 	</div>
 </div>
