--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -2,7 +2,7 @@
 <ul>	
     <li> <a href="home.html">Home</a></li>
     <li> <a href="index.html">Profile</a></li>
-    <li> <a href="Accounts.html">Accounts </a></li>
+    <li> <a href="/account/{{login.views.account}}">Accounts </a></li>
     <li> <a href="goals.html">Goals</a></li>
     <li> <a href="collection.html">Collection</a></li>
     <li> <a href="ATMs.html">ATMs</a></li>
