--- a/templates/profile.html
+++ b/templates/profile.html
@@ -55,7 +55,7 @@
 <img id="backpicture" src="../images/profile/kids.jpg" width="1055" height="300">
 <div id="ph">
 <img src="../images/profile/photo.png" width="200" height="200" alt="profile pic" >
-	<p id="name">Name&nbspSurname</p>
+	<p id="name">{{ name }}</p>
 	</div>
 </div>
 
