--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -17,7 +17,7 @@
 <ul>
     <li> <a href="home.html">Home</a></li>
     <li> <a href="index.html">Profile</a></li>
-    <li> <a href={%  url login.views.account %}>Accounts </a></li>
+    <li> <a href={{ login.views.account }}>Accounts </a></li>
     <li> <a href="goals.html">Goals</a></li>
     <li> <a href="collection.html">Collection</a></li>
     <li> <a href="ATMs.html">ATMs</a></li>
