--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" type="text/css" href= {% static 'home/home.css' %} />
  <style>
 	body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
-	#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
+	#greeting_box {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
 </style>
  <title>Home</title> 
 </head> 
