--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -41,7 +41,7 @@
 			<p>Login</p>
             {% csrf_token %}
             {{form.as_p}}
-			<input class="login_button" type="submit" value="Sign In" id="j_log" onclick="window.location.href='home.html'" />
+			<input class="login_button" type="submit" value="Sign In" id="j_log"/>
 
 	</form>
         </div>
