--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,8 +1,8 @@
 <div id="nav_bar">
-<ul>	
+<ul>
     <li> <a href="home.html">Home</a></li>
     <li> <a href="index.html">Profile</a></li>
-    <li> <a href="/account/{{login.views.account}}">Accounts </a></li>
+    <li> <a href={{ login.views.account }}>Accounts </a></li>
     <li> <a href="goals.html">Goals</a></li>
     <li> <a href="collection.html">Collection</a></li>
     <li> <a href="ATMs.html">ATMs</a></li>
