--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -13,7 +13,17 @@
 </head>
 <body>
 
-{% include 'nav_bar.html' %}
+<div id="nav_bar">
+<ul>
+    <li> <a href="home.html">Home</a></li>
+    <li> <a href="index.html">Profile</a></li>
+    <li> <a href={{ login.views.account }}>Accounts </a></li>
+    <li> <a href={{ login.views.goals }}>Goals</a></li>
+    <li> <a href="collection.html">Collection</a></li>
+    <li> <a href="ATMs.html">ATMs</a></li>
+    <li> <a href="Guide.html">Banking Guide</a></li>
+</ul>
+</div>
 
 
 <div id="banner">
