--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -102,8 +102,8 @@
 	
 </div>
 
-<div id="footer">
-		<p>Page Footer</p>
+<div>
+	{% include 'footer.html' %}
 </div>
 
 <script type="text/javascript">
