--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -83,7 +83,7 @@
         	<p>A <b>withdrawal</b> is when you take money out of your bank account.</p>
 	</div>
 		
-		<div id="banking_tips_box" style="width:1045px; height:400; overflow: auto; padding-left:10px;" >
+		<div id="banking_tips_box" style="width:1055px%; height:400; overflow: auto; padding-left:200px; padding-right:200px;" >
 			<h3>Get a savings account</h3>
             <ul>
                <li>If you really want to save a lot of money then getting a savings account is important and it should be separate to your normal account</li>
