--- a/templates/goal_render.html
+++ b/templates/goal_render.html
@@ -1,50 +1,57 @@
+<script type="text/javascript" >
 var bar_max_width = 860;
 var no_goal = "No goals";
 var max_goals = 5;
-var points_limit; //must be fetched from the database = (new savings) * (conversion constant) 
-var points_total; //must be fetched from the database = (all savings) * (conversion constant) 
+var points_limit; //must be fetched from the database = (new savings) * (conversion constant)
+var points_total; //must be fetched from the database = (all savings) * (conversion constant)
 var data = [5];
 
 function drawChart()
 {
-	for (var i = 0; i<data.length; i++) 
-	{	
+	for (var i = 0; i<data.length; i++)
+	{
 		if (data[i].title !== no_goal)
 		{
 			var step = bar_max_width/data[i].total_value;
 			var width = step * data[i].current_value;
-		
-			if (width >= bar_max_width*0.75) 
+            if (width > bar_max_width) width = 860;
+
+			if (width >= bar_max_width*0.75)
 			{
 				document.getElementById("bar" + (i+1)).style.backgroundColor = "MediumPurple";
 				document.getElementById((i+1)).style.color = "MediumPurple";
 				document.getElementById("horse" + (i+1)).style.backgroundColor = "MediumPurple";
 			}
-			if (width >= bar_max_width*0.5 && width < bar_max_width*0.75) 
+			if (width >= bar_max_width*0.5 && width < bar_max_width*0.75)
 			{
 				document.getElementById("bar" + (i+1)).style.backgroundColor = "DodgerBlue";
 				document.getElementById((i+1)).style.color = "DodgerBlue";
 				document.getElementById("horse" + (i+1)).style.backgroundColor = "DodgerBlue";
 			}
-			if (width >= bar_max_width*0.25 && width < bar_max_width*0.5) 
+			if (width >= bar_max_width*0.25 && width < bar_max_width*0.5)
 			{
 				document.getElementById("bar" + (i+1)).style.backgroundColor = "DarkOrange ";
 				document.getElementById((i+1)).style.color = "DarkOrange ";
 				document.getElementById("horse" + (i+1)).style.backgroundColor = "DarkOrange";
 			}
-			if (width < bar_max_width*0.25) 
+			if (width < bar_max_width*0.25)
 			{
 				document.getElementById("bar" + (i+1)).style.backgroundColor = "FireBrick";
 				document.getElementById((i+1)).style.color = "FireBrick";
 				document.getElementById("horse" + (i+1)).style.backgroundColor = "FireBrick";
 			}
-		
+
 			document.getElementById("bar" + (i+1)).style.width = width + "px";
 			var rem =  data[i].total_value - data[i].current_value;
-			document.getElementById("bar" + (i+1)).innerHTML = "<strong>" + data[i].current_value + "/" + data[i].total_value + " </strong>" 
-															 + '';
-			document.getElementById((i+1)).innerHTML = "<strong>" + (i+1) + " : " + data[i].title + " (" + rem + " left to save)" + "</strong>";
-			
+			document.getElementById("bar" + (i+1)).innerHTML = "<strong>" + data[i].current_value + "/" + data[i].total_value + " </strong>" + '';
+            if (rem <= 0){
+                document.getElementById((i+1)).innerHTML = "<strong>" + (i+1) + " : " + data[i].title + ": Goal achieved!" + "</strong>";
+            }
+			else{
+
+			document.getElementById((i+1)).innerHTML = "<strong>" + (i+1) + " : " + data[i].title + " (" + Number((rem).toFixed(2)) + " left to save)" + "</strong>";
+            }
+
 			if (data[i].current_value == data[i].total_value)
 			{
 				document.getElementById("wining_goal").innerHTML = "GOAL #" + (i+1);
@@ -57,7 +64,7 @@ function drawChart()
 			document.getElementById("bar" + (i+1)).innerHTML = " ";
 		}
 	}
-	
+
 	document.getElementById("unused").innerHTML = "Unused : " + points_limit + " points";
 }
 
@@ -68,16 +75,14 @@ function initialize()
 	document.getElementById("from_goal_num").value = null;
 	document.getElementById("to_goal_num").value = null;
 	document.getElementById("move_goal_points").value = null;
-	
+
 	/*data saved from the last session
 	 *to be fetched from the database */
 	data = [
-		{title: "Lego", total_value: 300, current_value: 140},
-		{title: "DVD", total_value: 200, current_value: 200},
-		{title: "PS4", total_value: 900, current_value: 200},
-		{title: "Ice Cream Maker", total_value: 600, current_value: 300}
+        {% for key, value in goals.items %}{title: "{{ value.desc }}", total_value: {{ value.target }}, current_value: {{ value.progress }}},
+        {% endfor %}
+        {title: "Ice Cream Maker", total_value: 600, current_value: 300}
 	];
-    newGoal("Lego", 300, 140);
 	points_limit = 200;
 	drawChart();
 }
@@ -98,9 +103,9 @@ function newGoal(title, total_value, current_value)
 		}
 		i++;
 	}
-	
+
 	if (i == data.length) {alert("New Goal cannot be added! Wait till a goal to completed");}
-	
+
 	drawChart();
 }
 
@@ -109,7 +114,7 @@ function goalIsComplete()
 	/*invoked when prize has been claimed*/
 	var flag = true;
 	var i = 0;
-	
+
 	for(var i=0; i<data.length; i++)
 	{
 		if (data[i].current_value == data[i].total_value && data[i].current_value !== 0 && data[i].total_value != 0 && flag)
@@ -126,7 +131,7 @@ function goalIsComplete()
 			flag = false;
 		}
 	}
-	
+
 	if (flag) {alert("Oops! Sorry, you haven't completed any goals yet.");}
 
 	drawChart();
@@ -148,11 +153,11 @@ function autoFillFromGoalFields(id, event)
 
 function addPoints()
 {
-	var goal = parseInt(document.getElementById("add_goal_num").value)-1; 
-	var points = parseInt(document.getElementById("add_goal_points").value); 
-	
+	var goal = parseInt(document.getElementById("add_goal_num").value)-1;
+	var points = parseInt(document.getElementById("add_goal_points").value);
+
 	var new_value = data[goal].current_value + points;
-	
+
 	if (points_limit - points >= 0 && data[goal].title !== no_goal && new_value <= data[goal].total_value)
 	{
 		data[goal].current_value = new_value;
@@ -163,25 +168,25 @@ function addPoints()
 	{
 		alert("Action cannot be completed due to:\n-you have exceeded unused points limit\n-goal does not exist\n-you are about to exceed goal limit\nCheck you inputs again.");
 	}
-	
-		
+
+
 }
 
 function movePoints()
 {
-	var to = parseInt(document.getElementById("to_goal_num").value)-1; 
-	var from = parseInt(document.getElementById("from_goal_num").value)-1; 
-	var points = parseInt(document.getElementById("move_goal_points").value); 
-	
+	var to = parseInt(document.getElementById("to_goal_num").value)-1;
+	var from = parseInt(document.getElementById("from_goal_num").value)-1;
+	var points = parseInt(document.getElementById("move_goal_points").value);
+
 	var new_value_to = data[to].current_value + points;
 	var new_value_from = data[from].current_value - points;
-	
-	if (new_value_from >= 0 
-		&& data[from].title !== no_goal 
-		&& data[to].title !== no_goal 
+
+	if (new_value_from >= 0
+		&& data[from].title !== no_goal
+		&& data[to].title !== no_goal
 		&& new_value_to <= data[to].total_value)
 	{
-		if (data[from].current_value == data[from].total_value) 
+		if (data[from].current_value == data[from].total_value)
 		{
 			document.getElementById("wining_goal").innerHTML = " ";
 		}
@@ -192,6 +197,8 @@ function movePoints()
 	{
 		alert("Action cannot be completed due to:\n-you have exceeded (from) goal points limit\n-goal(s) do(es) not exist\n-you are about to exceed (to) goal limit\n Check you inputs again.");
 	}
-	
-	drawChart();	
+
+	drawChart();
 }
+
+</script>
