--- a/templates/goals.html
+++ b/templates/goals.html
@@ -17,17 +17,7 @@
 
 <body onLoad="initialize();">
 
-<div id="nav_bar">
-<ul>	
-    <li> <a href="home.html">Home</a></li>
-    <li> <a href="index.html">Profile</a></li>
-    <li> <a href="Accounts.html">Accounts </a></li>
-    <li> <a href="goals.html">Goals</a></li>
-    <li> <a href="collection.html">Collection</a></li>
-    <li> <a href="ATMs.html">ATMs</a></li>
-    <li> <a href="Guide.html">Banking Guide</a></li>
-</ul>
-</div>
+{% include 'nav_bar.html' %}
 
 <div id="banner">
 <img src={% static 'goals/Goals_1.png' %} width="1055px" height="191px" alt="Goals Banner">
