--- a/templates/references.html
+++ b/templates/references.html
@@ -17,7 +17,7 @@
     <li> <a href="goals.html">Goals</a></li>
     <li> <a href="collection.html">Collection</a></li>
     <li> <a href="ATMs.html">ATMs</a></li>
-    <li> <a href="Guide.html">Banking Guide</a></li>
+    <li> <a href="guide.html">Banking Guide</a></li>
 </ul>
 </div>
 
