--- a/templates/home.html
+++ b/templates/home.html
@@ -23,12 +23,12 @@
 		<div id="nav_panel">
 	
 			<div id="frame">	
-				<a href="Accounts.html" class="buttons">
+				<a href={% url 'account' %} class="buttons">
 					<img src={% static 'home/piggy_bank_1.png' %} width="230px" height="230px" alt="Accounts">
 					<p>Accounts</p>
 				</a>
 				
-				<a href="goals.html" class="buttons">
+				<a href={% url 'goals' %} class="buttons">
 					<img src={% static 'home/goblet_1.png' %} width="230px" height="230px" alt="Goals">
 					<p>Goals</p>
 				</a>
@@ -48,16 +48,12 @@
 					<p>Collection</p>
 				</a>
 				
-				<a href="Guide.html" class="buttons">
+				<a href={% url 'guide' %} class="buttons">
 					<img src={% static 'home/book_1.png' %} width="230px" height="230px" alt="Banking Guide">
 					<p>Banking Guide</p>
 				</a>
 			</div>
-		
-		</div>
-	
-	
-	</div>
+
 	
 	<div id="footer">
 		{% include 'footer.html' %}
