--- a/templates/collection.html
+++ b/templates/collection.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html >
 <html>
 <head> 
+{% load staticfiles %}
+
  <meta http-equiv="content-type" 
  content="text/html;charset=utf-8"/> 
  <link rel="stylesheet" type="text/css" href= {% static 'collection/collection.css' %}/>
@@ -13,19 +15,8 @@
 
 
 <body>
+{% include 'nav_bar.html' %}
 
-
-<div id="nav_bar">
-<ul>	
-    <li> <a href="home.html">Home</a></li>
-    <li> <a href="index.html">Profile</a></li>
-    <li> <a href="Accounts.html">Accounts </a></li>
-    <li> <a href="goals.html">Goals</a></li>
-    <li> <a href="collection.html">Collection</a></li>
-    <li> <a href="ATMs.html">ATMs</a></li>
-    <li> <a href="guide.html">Banking Guide</a></li>
-</ul>
-</div>
 
 <div id="banner">
 	<img  src={% static 'collection/Collection_1.png' %} width="1055px" height="191px" alt="Collection Banner">
