--- a/templates/goals.html
+++ b/templates/goals.html
@@ -82,15 +82,17 @@ Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
 <div id="overview">
 	<div id="score">
 		<p class="heading">SCORE</p>
-		<p>Total : 840 points</p>
+		<p>Total : {{ total }}</p>
 		<p id="unused"></p>
 	</div>
-	
-	<div id="winner">
-		<p class="heading">WINNER</p>
+	{% for key, value in goals.items %}{title: "{{ value.desc }}", total_value: {{ value.target }}, current_value: {{ value.progress }}},
+    {% if value.target - value.progress <= 0 %}
+	<div class="winner">
+		<p class="heading">Goals reached</p>
 		<p id="wining_goal"></p>
 	</div>
-	
+    {% endif %}
+	{% endfor %}
 	<input class="claim_prize" type="button" value="CLAIM PRIZE" onClick="goalIsComplete();" />
 </div>
 
