--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -13,7 +13,7 @@
     <li> {% block nav-goals %}<a href="{% url 'goals' %}">Goals</a>{% endblock %}</li>
     <li> {% block nav-collection %}<a href="{% url 'collection' %}">Collection</a>{% endblock %}</li>
     <li> {% block nav-ATMs %}<a href="{% url 'ATMs' %}">ATMs</a>{% endblock %}</li>
-    <li> {% block nav-guide %}<a href="{% url 'guide' %}">Banking Guide</a>{% endblock %}</li>
+    <li> {% block nav-guide %}<a href="{% url 'guide' %}"gi>Banking Guide</a>{% endblock %}</li>
 </ul>
 
 </div>
