--- a/templates/home.html
+++ b/templates/home.html
@@ -33,17 +33,17 @@
 					<p>Goals</p>
 				</a>
 				
-				<a href="ATMs.html" class="buttons">
+				<a href={% url 'ATMs' %} class="buttons">
 					<img src={% static 'home/map_1.png' %} width="230px" height="230px" alt="ATMs">
 					<p>ATMs</p>
 				</a>
 				
-				<a href="profile.html" class="buttons">
+				<a href={% url 'profile' %} class="buttons">
 					<img src={% static 'home/photo.jpg' %} width="200px" height="200px" alt="Profile" id="photo">
 					<p>Profile</p>
 				</a>
 				
-				<a href="collection.html" class="buttons">
+				<a href={% url 'collection' %} class="buttons">
 					<img src={% static 'home/cards_1.png' %} width="230px" height="230px" alt="Collection">
 					<p>Collection</p>
 				</a>
