--- a/templates/goals.html
+++ b/templates/goals.html
@@ -82,14 +82,19 @@ Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
 <div id="overview">
 	<div id="score">
 		<p class="heading">SCORE</p>
-		<p>Total : {{ total }}</p>
+		<p>Total : {{ total }} points</p>
 		<p id="unused"></p>
 	</div>
 	<div class="winner">
-		<p class="heading">Goals reached</p>
-		<p id="wining_goal"></p>
+		<p class="heading">Achieved goal</p>
+         {% for key,value in goals.items %}
+        {% if value.reached %}
+            <p class ='achieved_goal'>{{ value.desc }}</p>
+            <input class="claim_prize" type="button" value="Claim" id = {{ value.desc }} onClick="goalIsComplete();" />
+        {% endif %}
+    {% endfor %}
 	</div>
-	<input class="claim_prize" type="button" value="CLAIM PRIZE" onClick="goalIsComplete();" />
+
 </div>
 
 <form id="control_panel">
