--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -11,7 +11,7 @@
     <!--<li> <a href="index.html">Profile</a></li>-->
     <li> {% block nav-account %}<a href="{% url 'account' %}">Accounts</a>{% endblock %}</li>
     <li> {% block nav-goals %}<a href="{% url 'goals' %}">Goals</a>{% endblock %}</li>
-    <!--<li> {% block nav-collection %}<a href="{% url 'collection' %}">Collection</a>{% endblock %}</li> -->
+    <li> {% block nav-collection %}<a href="{% url 'collection' %}">Collection</a>{% endblock %}</li>
     <li> {% block nav-ATMs %}<a href="{% url 'ATMs' %}">ATMs</a>{% endblock %}</li>
     <li> {% block nav-guide %}<a href="{% url 'guide' %}"gi>Banking Guide</a>{% endblock %}</li>
 </ul>
