--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -17,7 +17,8 @@ body		{background-color: #262626;}
 			height: 85px;
 			background-position: left;
 			background-size: 157px 85px;
-			background-repeat: no-repeat;}
+			background-repeat: no-repeat;
+            width:100%;}
 #nav_bar ul	{margin: 5px;
 			text-align: right;
 			position: relative;
@@ -40,13 +41,13 @@ body		{background-color: #262626;}
 /**---------------------------------------------------------------------*/		
 
 /**---------------------------------------------------------------------*/	
-#box1, #box2, #box3	{width: 1450px;
+.management_panel, .goal_panel, .atms_panel	{width: 1450px;
 					height: 400px;
 					margin: 100px auto;
 					color: #FFFFFF;
 					/*border: 1px solid black;*/}
 
-p.title	{font-family: Century Gothic;
+.title	{font-family: Century Gothic;
 		font-size: 40px;
 		font-weight: bold;
 		color: #FFFFFF;
@@ -55,37 +56,52 @@ p.title	{font-family: Century Gothic;
 		padding: 5px 20px;
 		width: 400px;
 		height: 100px;}
+.child_name{font-family: Century Gothic;
+        text-aligh:center;
+		font-size: 40px;
+		font-weight: bold;
+		color: #FFFFFF;
+		background-color: #0B8C52;
+		margin-bottom: 0px;
+        margin-left:auto;
+        margin-right:auto;
+		padding: 5px 20px;
+		width: match-parent;
+		height: 100px;
 
-#manage_child_account, #set_goals, #choose_atms	{width: 1450px;
+}
+
+
+.manage_child_account, #set_goals, #choose_atms	{width: 1450px;
 												height: 300px;
 												background-color: #5B6562;
 												border: 5px solid #0B8C52;}
 												
-#manage_child_account	{vertical-align: middle;}
+.manage_child_account	{vertical-align: middle;}
 
 /**---------------------------------------------------------------------*/	
 
 /**---------------------------------------------------------------------*/	
-form#manage_child_account p	{font-family: Century Gothic;
+.manage_child_account p	{font-family: Century Gothic;
 							font-weight: bold;
 							font-size: 25px;
 							margin: 30px;}	
 							
-#child_accounts, #transfer, #set_limit	{width: 470px;
+.child_accounts, .transfer, .set_limit	{width: 470px;
 										float: left;}
 							
-#child_accounts	{margin-top: 60px;}	
+.child_accounts	{margin-top: 60px;}
 											
-#transfer	{height: 300px;
+.transfer	{height: 300px;
 			border-left: 3px solid #0B8C52;
 			border-right: 3px solid #0B8C52;}											
 
-#transfer	p	{position: relative;
+.transfer	p	{position: relative;
 				top: 10px;
 				right: 60px;
 				text-align: right;}
 
-#transfer input.make_tranfser	{width: 310px;
+.transfer input.make_tranfser	{width: 310px;
 							margin-left: 70px;
 							margin-top: 10px;
 							background-color: #0B8C52;
@@ -96,18 +112,18 @@ form#manage_child_account p	{font-family: Century Gothic;
 							font-weight: bold;
 							color: #FFFFFF;}
 										
-#transfer p input	{height: 30px;
+.transfer p input	{height: 30px;
 				width: 200px;
 				vertical-align: middle;}
 
-#set_limit {margin: 15px;}				
+.set_limit {margin: 15px;}
 				
-#set_limit p input	{height: 30px;
+.set_limit p input	{height: 30px;
 				width: 300px;
 				margin: 10px;
 				vertical-align: middle;}							
 				
-#set_limit input.set_limit	{background-color: #0B8C52;
+.set_limit input.set_limit	{background-color: #0B8C52;
 							height: 35px;
 							font-family: Century Gothic;
 							font-size: 20px;
